--- a/Site.Master
+++ b/Site.Master
@@ -37,8 +37,8 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" runat="server" href="~/">RR Rumble Royal</a>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" runat="server" href="~/"><img src="Assets/logo.png" height="40px" /> Rumble Royal</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
