--- a/Site.Master
+++ b/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %></title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -38,15 +38,15 @@
             </Scripts>
         </asp:ScriptManager>
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" runat="server" href="~/"><img src="Assets/logo.png" height="40px" /> Rumble Royal</a>
+            <a class="navbar-brand" runat="server" href="~/"><img src="Assets/logo.png" height="40" /> Rumble Royal</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div runat="server" class="navbar-nav">
                     <a class="nav-link" runat="server" href="~/">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-link" runat="server" href="~/Contact">Tambah</a>
-                    <a class="nav-link" runat="server" href="~/About">Profil</a>
+                    <a class="nav-link" runat="server" href="~/Tambah">Tambah</a>
+                    <a class="nav-link" runat="server" href="~/About">About</a>
                 </div>
             </div>
         </nav>
